# subfv-core

./: .gitignore  CMakeLists.txt  README.md
cmake/: subfvcoreConfig.cmake.in
examples/: CMakeLists.txt
examples/example1/: CMakeLists.txt  example1.F90  example1.geo
examples/example2/: CMakeLists.txt  example2.F90  example2.geo  example2_module.F90
src/: mesh_geometry_module.F90  mesh_module.F90  precision_module.F90
src/io/: io_module.F90  subfv_io_module.F90
src/linear_algebra/: linear_solver_module.F90  sparse_bcsr_linear_module.F90  sparse_csr_linear_module.F90  sparse_linear_module.F90  subfv_linear_solver_module.F90  subfv_sparse_bcsr_linear_module.F90  subfv_sparse_csr_linear_module.F90  subfv_sparse_linear_module.F90
src/mesh/: mesh_connectivity_module.F90  mesh_geometry_module.F90  mesh_module.F90  mesh_reading_module.F90  subfv_mesh_connectivity_module.F90  subfv_mesh_geometry_module.F90  subfv_mesh_module.F90  subfv_mesh_reading_module.F90
src/mpi/: mpi_module.F90  subfv_mpi_module.F90
src/utils/: subfv_precision_module.F90
tools/scripts/: partition_mesh.sh
